   * Fix issue with JPEG , adding dinfo.do_fancy_upsampling = FALSE;
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2011x08x20x194659
   * Made micro-lightswitch optional (see lightwitch option in motion.conf)
   * Fixed help text for options event_gap and area_detect
   * Fixed motion.conf-dist , adding text according with config options.

3.2.12 Summary of Changes

Bugfixes
   * Fixed name space clash with libjpeg8 (Kenneth Lavrsen)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x01x22x084753
   * Fixed FFV1 codec encode with ffmpeg (Angel Carpintero)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x04x13x032553 
   * Fix conv_uyvyto420p segfault ( William M Brack )
   * Enhancing the palette selection ( William M Brack )  
   * Fix zombies on OpenBSD. (Mark Feenstra)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2010x04x28x054348


3.2.11.1 Sumary of Changes

Bugfixes
   * Fix Segfault on reload or quit for vloopback (maybe other v4l1 devices too) (Peter Holik)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x06x17x090603
   * Fix fd leaks in external pipe. (Angel Carpintero)
   * Avoid possible stack smashing in v4l_open_vidpipe(). (Angel Carpintero)
   * Allow compile with OpenSuse ffmpeg package (15594svn-20081010)
     http://www.lavrsen.dk/twiki/bin/view/Motion/SupportQuestion2008x10x25x070400 (Angel Carpintero)
   * Fix warning for syslog().  (Angel Carpintero)
   * Better detection of ffmpeg
     http://www.lavrsen.dk/foswiki/pub/Motion/ReleaseNoteMotion3x2x11/ffmpeg-detection.diff.gz
     (Angel Carpintero)
   * Fix warning for __USE_GNU redefined (Peter Holik)
     http://www.lavrsen.dk/foswiki/bin/view/Motion/BugReport2009x06x17x122137 (Peter Holik)
   * Allow compile with NetBSD and make LP64 compliant video_freebsd.c (Andreas Wrede)
   * Fix segfault for new libjpeg v7. (Angel Carpintero)

3.2.11 Summary of Changes

Features